# kgsteward

./: .gitignore  .pre-commit-config.yaml  README.md  kgsteward  mkdocs.yml  pyproject.toml  yamldoc.md
.github/workflows/: tests.yml
doc/: README.md  execution_model.md  graphdb.md  internal.md  kgsteward.md  kgsteward.schema.json  kgsteward.schema.md  kgsteward.ttl  make_this_doc.py  usecase.md  yamldoc.md
doc/drivers/: README.md
doc/example/load_rdf_file/: graphs.yaml  sample.nt
doc/first_steps/: Qleverfile  README.fuseki.md  README.md  dataset.yaml  demo_rdf4j.config.ttl  demo_rdf4j.yaml  first_steps_graphdb.yaml  fuseki.config.ttl  fuseki.yaml  graphdb.yaml  qlever.yaml  query.yaml  rdf4j.yaml
doc/first_steps/data/: company.ttl
doc/first_steps/ref/: all_triples_but_dates.tsv  all_triples_stable.tsv
doc/first_steps/sparql/query/: all_triples_but_dates.rq  all_triples_stable.rq
doc/first_steps/sparql/update/: a_blue_car_for_Alice.rq
doc/first_steps/sparql/validate/: there_are_445_triples.rq  there_are_453_triples.rq  there_are_677_triples.rq
doc/grlc/: grlc.schema.json  grlc.schema.md  make_grlc_README.py  queryform-extension.md
doc/kgsteward.schema.out/: README.md  kgsteward-properties-graphs-items-properties-dataset.md  kgsteward-properties-graphs-items-properties-file-items.md  kgsteward-properties-graphs-items-properties-file.md  kgsteward-properties-graphs-items-properties-parent.md  kgsteward-properties-graphs-items-properties-system-items.md  kgsteward-properties-graphs-items-properties-system.md  kgsteward-properties-graphs-items-properties-target_graph_context.md  kgsteward-properties-graphs-items-properties-url-items.md  kgsteward-properties-graphs-items-properties-url.md  kgsteward-properties-graphs-items.md  kgsteward-properties-graphs.md  kgsteward-properties-server_url.md  kgsteward.md
doc/rdf/: kgsteward.ttl
doc/scaling_up/: README.md
doc/user_guide/: README.md
doc/yaml/: README.md  kgsteward.schema.json  kgsteward.schema.md  make_this_doc.py  make_yaml_README.py
example/data/: README.md
example/first_steps/: compose.yml  dataset.yaml  first_steps_graphdb.config.ttl  first_steps_graphdb.yaml  first_steps_graphdb_fileserver.yaml
example/first_steps/data/: Alice.ttl  product.ttl
example/first_steps_fuseki/: .gitignore  README.md  config-fuseki-tdb2.ttl  first_steps_fuseki.yaml  solo_artist.rq
example/first_steps_graphdb/: Alice.ttl  BEATLES_DEMO-config.ttl  Bob.ttl  README.md  first_steps_graphdb.yaml  first_steps_graphdb_username.yaml
example/load_rdf_file/: input.ttl  make_samples.sh  sample.nt  sample.rdfxml  sample.trig  test_graphdb.yaml
src/: graphdb.py  kgsteward.py
src/kgsteward/: __init__.py  common.py  fileserver.py  fuseki.py  generic.py  graphdb.py  grlc.py  isql.py  kgsteward.py  metaquery.py  oxigraph.py  qlever.py  qlever.py.BAK  rdf4j.py  special.py  virtuoso.py  yamlconfig.py  yamlconfig.py.NEXT  yamlconfig_2.py
tests/: __init__.py  test_common.py  test_fuseki.py  test_fuseki.py.BROKEN  test_generic.py  test_graphdb.py  test_graphdb.py.BROKEN  test_grlc.py  test_grlc_queryform.py  test_qlever.py  test_rdf4j.py  test_rdf4j.py.SOON  test_stamp_command.py
