[project]
name = "kgsteward"
version = "1.0.2"
authors = [{ name = "Marco Pagni", email = "marco.pagni@sib.swiss" }]
description = "Knwowledge Graph Steward - Command line tool to help manage RDF store"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GPL3v3 License",
  "Operating System :: OS Independent",
]
dependencies = ["dumper", "requests", "pathlib", "PyYAML" ]

[project.urls]
"Homepage" = "https://github.com/sib-swiss/kgsteward"
"Bug Tracker" = "https://github.com/sib-swiss/kgsteward/issues"
# Documentation = https://github.com/sib-swiss/kgsteward/doc
# Source = https://github.com/sib-swiss/kgsteward/src

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
kgsteward = "kgsteward:run_kgsteward"
