[project]
name = "kgsteward"
version = "2.0.6"
authors = [{ name = "Marco Pagni", email = "marco.pagni@sib.swiss" }]
description = "Knowledge Graph Steward - Command line tool to manage content of RDF store"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
  "Operating System :: OS Independent",
  "Development Status :: 4 - Beta"
]
dependencies = [
  "dumper",
  "requests",
  "pathlib",
  "PyYAML",
  "termcolor",
  "pydantic >=2.10.0",
  "pprintpp >=0.4.0",
  "rdflib>=6.3.2",
  "pyyaml-include>=2.2",
]

[project.urls]
"Homepage" = "https://github.com/sib-swiss/kgsteward"
"Bug Tracker" = "https://github.com/sib-swiss/kgsteward/issues"
"Documentation" = "https://github.com/sib-swiss/kgsteward"
"Source" = "https://github.com/sib-swiss/kgsteward"

[build-system]
# there is an open issue with setuptools and uv
# see discussion https://github.com/astral-sh/uv/issues/9513
# requires = ["setuptools>=61.0"]
# build-backend = "setuptools.build_meta"
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
  "jsonschema-markdown>=0.3.18",
  "rdflib>=6.3.2",
  "pytest",
  "pytest-cov",
  "ruff",
  "testcontainers",
  "mkdocs >=1.4.2",
  "mkdocs-material >=8.2.7",
  "mkdocstrings[python] >=0.19.1",
  "mdx-include >=1.4.1",
  "mkdocs-markdownextradata-plugin >=0.2.5",
  "mkdocs-open-in-new-tab",
  "hatchling>=1.27.0",
]

[project.scripts]
kgsteward = "kgsteward:run_kgsteward"
# kgsteward = "kgsteward.__init__:run_kgsteward"
